--- a/css/elements/_text.scss
+++ b/css/elements/_text.scss
@@ -2,19 +2,15 @@
 @use "../theme";
 
 p {
-	line-height: 1.5;
-
 	&:last-child {
 		margin-bottom: 0;
 	}
 }
 
-li {
-	line-height: 1.5;
-}
-
 a {
 	&, &:link {
+		text-underline-position: from-font;
+		text-decoration-thickness: 1px;
 		color: var(--text-color-link);
 	}
 	&:visited {
@@ -26,6 +22,10 @@ a {
 }
 
 h1, h2, h3 {
+	font-family: Bellefair, serif; // unfortunately this font has weird stroke problems...
+	font-weight: normal;
+	-webkit-text-stroke-width: 0.2px; // fix Bellefair's weird stroke problems
+	line-height: 1.5;
 	color: var(--heading-color);
 
 	a {
