--- a/css/modules/_nav.scss
+++ b/css/modules/_nav.scss
@@ -24,10 +24,10 @@ $nav-link-padding: 0.5em;
 		padding: 0 $nav-link-padding;
 
 		&:not(:hover) {
-			text-decoration: none;
+			text-decoration-line: none;
 		}
 		&[aria-current="page"] {
-			text-decoration: underline;
+			text-decoration-line: underline;
 		}
 	}
 }
