--- a/css/modules/_site-header.scss
+++ b/css/modules/_site-header.scss
@@ -24,7 +24,7 @@ header.site-header {
 
 	white-space: nowrap;
 	text-shadow: 0 0 10px black;
-	text-decoration: none;
+	text-decoration-line: none;
 
 	font-family: "Breathe Fire IV", serif;
 	font-size: max(17.9cqw, 40px);
